Change taget dir

--- a/KalturaWowzaServer/build.gradle
+++ b/KalturaWowzaServer/build.gradle
@@ -110,7 +110,7 @@ task prepareRelease(type: Zip, dependsOn: build ) {
         into ("lib")
     }
     from(configurations.forInstaller) {
-        into ("lib")
+        into ("installation")
     }
 
     doLast {
